Fix text overflow in footer

--- a/src/components/Footer/footer.module.css
+++ b/src/components/Footer/footer.module.css
@@ -148,7 +148,7 @@
 .footerCopyRight {
   grid-column: 1 / -1;
   background-color: var(--gray-800);
-  color: var(--gray-300);
+  color: var(--gray-400);
   display: flex;
   column-gap: 0.5rem;
   justify-content: center;
@@ -160,6 +160,7 @@
 
 .footerCopyRight a {
   color: var(--primary);
+  filter: brightness(0.8);
 }
 
 .socialItem:focus-visible,
@@ -183,5 +184,7 @@
 @media only screen and (max-width: 26rem) {
   .footerCopyRight {
     font-size: 0.8rem;
+    flex-direction: column;
+    row-gap: 0.5rem;
   }
 }
